cmake_minimum_required(VERSION 3.25)
project(DS_Lab C)

set(CMAKE_C_STANDARD 17)

add_executable(Main main.c)
add_executable(CallByAddress "Lab 1/Q1_CallByAddress.c"
        "Lab 1/Q1_CallByAddress.c")
add_executable(DynamicMalloc "Lab 1/Q2_DynamicMalloc.c")
add_executable(EmployeeStruct "Lab 1/Q3_EmployeeStruct.c")
add_executable(ComplexNumber "Lab 1/Q4_ComplexNumber.c")
add_executable(ArrayOps "Lab 2/Q1_ArrayOps.c")
add_executable(MatrixOps "Lab 2/Q2_MatrixOps.c")
add_executable(SparseMatrix "Lab 2/Q3_SparseMatrix.c")
add_executable(TransposeTriplet "Lab 3/Q1_TransposeTriplet.c")
add_executable(AddTriplet "Lab 3/Q2_AddTriplet.c")
add_executable(ArrayPolynomial "Lab 3/Q3_ArrayPolynomial.c")
add_executable(LinkedList "Lab 4/Q1_LinkedList.c")
add_executable(LinkedListOps "Lab 4/Q2_LinkedListOps.c")
add_executable(LLPolynomial "Lab 4/Q3_LLPolynomial.c")
add_executable(DoublyLL "Lab 5/Q1_DoublyLL.c")
add_executable(CircularLL "Lab 5/Q2_CircularLL.c")
add_executable(LLSparseMatrix "Lab 5/Q3_LLSparseMatrix.c")
add_executable(ArrayStack "Lab 6/Q1_ArrayStack.c")
add_executable(LinkedListStack "Lab 6/Q2_LinkedListStack.c")
add_executable(InfixToPostfix "Lab 6/Q3_InfixToPostfix.c")
add_executable(LinearQueue "Lab 7/Q1_LinearQueue.c")
add_executable(CircularQueue "Lab 7/Q2_CircularQueue.c")
add_executable(LinkedListQueue "Lab 7/Q3_LinkedListQueue.c")
add_executable(CircularDeque "Lab 8/Q1_CircularDeque.c")
add_executable(PriorityQueue "Lab 8/Q2_PriorityQueue.c")
add_executable(BSTTraversals "Lab 9/Q1_BSTTraversals.c")
add_executable(BSTOps "Lab 9/Q2_BSTOps.c")
add_executable(BSTDelete "Lab 9/Q3_BSTDelete.c")
add_executable(AdjMtxGraph "Lab 10/Q1_AdjMtxGraph.c")
add_executable(GraphDFS "Lab 10/Q2_GraphDFS.c")
add_executable(GraphBFS "Lab 10/Q3_GraphBFS.c")
add_executable(InsertionSort "Lab 11/Q1_InsertionSort.c")
add_executable(SelectionSort "Lab 11/Q2_SelectionSort.c")
add_executable(QuickSort "Lab 11/Q3_QuickSort.c")
add_executable(MergeSort "Lab 12/Q1_MergeSort.c")
add_executable(HeapSort "Lab 12/Q2_HeapSort.c")
add_executable(BinarySearch "Lab 12/Q3_BinarySearch.c")
add_executable(QueueUsingStack "Assignment 4/QueueUsingStack.c")
add_executable(Tester Tester.c)
add_executable(SwapK "Assignment 3/SwapK.c")
add_executable(AltElemLL "Assignment 3/AltElemLL.c")
add_executable(DivideList "Assignment 3/DivideList.c")
add_executable(DeleteNafterM "Assignment 3/DeleteNafterM.c")
add_executable(PalindromLL "Assignment 3/PalindromLL.c")
add_executable(DeleteAndPush "Assignment 3/DeleteAndPush.c")
add_executable(LLPolynomialOps "Assignment 3/LLPolynomialOps.c")
add_executable(LeafNodeDepth "Assignment 5/LeafNodeDepth.c")
add_executable(BSTHeight "Assignment 5/BSTHeight.c"
        "Assignment 5/BTCopy.c"
        "Assignment 5/BSTAllPaths.c"
        "Assignment 5/AVLTree.c")
add_executable(DeleteLeafNodes "Assignment 5/DeleteLeafNodes.c")
add_executable(LevelOrder "Assignment 5/LevelOrder.c")
add_executable(SparseSub "Class Codes/SparseOps.c")
add_executable(DoublyLinkedList "Class Codes/DoublyLinkedList.c")
add_executable(CircularLinkedList "Class Codes/CircularLinkedList.c")
add_executable(LLSparse "Class Codes/LLSparse.c")